--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Country life'
 - !lcc 'HT'
 - !lcsh 'Christian sociology'
+- GITenberg
 title: 'The Evolution of the Country Community
 
   A Study in Religious Sociology'
